--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Adresa</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">7. Septembar bb <br>Zaječar</div>
+                                <div class="small text-black-50">Ugostiteljska radnja <br> Miloš Nikolić PR <br>7. Septembar bb <br>Zaječar</div>
                             </div>
                         </div>
                     </div>
@@ -132,8 +132,9 @@
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">
-            <img src="assets/eu.png">
-            <img src="assets/eu1.png">
+            <img src="assets/eu.png" class="responsive">
+            <img src="assets/eu1.png" class="responsive">
+
             Copyright &copy; <!--<a href="https://www.instagram.com/badivuk/?hl=en" target="_blank">Badivuk</a>-->Euroclub 2021</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
