--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">O nama</h2>
-                        <p class="text-white-50">
+                        <h2 class="text-black mb-4">O nama</h2>
+                        <p class="text-black-50">
                             Nudimo Vam organizaciju svih vrsta proslava u najlepšem i najprijatnijem ambijentu u gradu!
                         </p>
                     </div>
@@ -63,7 +63,7 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section bg-white" id="projects">
             <div class="container col-lg-8 col-lg-offset-2">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
@@ -78,6 +78,8 @@
             </div>
         </section>
         <!-- Signup-->
+            <a href="https://www.eu-za-turizam.rs/" target="_blank"><img src="assets/eu.png" class="responsive"></a>
+            <a href="https://www.eu-za-turizam.rs/" target="_blank"><img src="assets/eu1.png" class="responsive"></a>
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
@@ -132,8 +134,7 @@
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">
-            <img src="assets/eu.png" class="responsive">
-            <img src="assets/eu1.png" class="responsive">
+            
 
             Copyright &copy; <!--<a href="https://www.instagram.com/badivuk/?hl=en" target="_blank">Badivuk</a>-->Euroclub 2021</div></footer>
         <!-- Bootstrap core JS-->
